src/discrete-layer/components/layer-details/entity-dialog.css
#entityDialog .mdc-dialog__surface{
  /*max-width: unset;*/
}

#entityDialog .closeIcon{
  margin-left: auto;
}

body[dir='rtl'] #entityDialog .closeIcon{
  margin-left: unset;
  margin-right: auto;
}

#entityDialog .dialogBody{
  overflow-y: hidden !important;
}

#entityDialog .form{
  max-height: 880px !important;
}

#entityDialog .content{
  max-height: 740px;
  padding-right: 20px;
}

body[dir='rtl'] #entityDialog .content{
  padding-right: unset;
  padding-left: 20px;
}

#entityDialog .section{
  border: 1px solid var(--mdc-theme-gc-selection-background, #fff);
  border-radius: 10px;
  padding: 10px;
}

#entityDialog .buttons{
  display: flex;
  justify-content: flex-end;
  gap: 20px;
  margin: 20px;
}

